Ensure we can compile for every major version